# better-prompts-mcp

./: .gitignore  LICENSE  README.md  claude_desktop_config_example.json  env_example.txt  pyproject.toml  verify_install.py  使用说明.md  项目总结.md
how-to-prompt/: For Server Developers-python.md  README.md  how-to-prompt.md  make_prompt.md  向知识库添加文本段落API.md  检索知识库API.mdx.md  萃取.md
src/mcp_server_better_prompts/: __init__.py  __main__.py  server.py
